--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/forms": "^0.5.6",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
