--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-mdr": "^0.1.4",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
