--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/forms": "^0.5.6",
+    "antd": "^5.14.2",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.4",
+    "nuka-carousel": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-id-swiper": "^4.0.0",
     "react-mdr": "^0.1.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0"
